# seaweedFS_module

./: .gitignore  config.json.example  organize_cases.md  pyproject.toml  requirements.txt  seaweed_README.md
backend/: config.py  main.py  models.py
backend/routers/: browse.py  download.py
backend/services/: seaweed_client.py
frontend/: vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CategoryFilter.tsx  ImagePreview.tsx
frontend/src/pages/: BrowsePage.tsx  SettingsPage.tsx
work/ollama/prom/prompt_util/: pyproject.toml  test.sh
work/ollama/prom/prompt_util/app/: __init__.py  langchain.py  prompt.py
work/ollama/prom/prompt_util/app/util/: logger.py
work/ollama/prom/prompt_util/pytest/: test_prompt.py
work/safety/seaweedFS_module/: README.md  organize_cases.py  seaweed_download_from_seaweedfs.py  seaweed_upload_to_seaweedfs.py  start.sh  summary.md  upload_to_seaweedfs.py
work/safety/seaweedFS_module/backend/routers/: download.py  settings.py  upload.py
work/safety/seaweedFS_module/backend/services/: task_manager.py
work/safety/seaweedFS_module/frontend/: package-lock.json  package.json
work/safety/seaweedFS_module/frontend/src/api/: client.ts
work/safety/seaweedFS_module/frontend/src/components/: Layout.tsx  ProgressPanel.tsx
work/safety/seaweedFS_module/frontend/src/pages/: DownloadPage.tsx  UploadPage.tsx
work/safety/seaweedFS_module/frontend/src/types/: index.ts
