[project]
name = "seaweedfs-module"
version = "0.1.0"
description = "SeaweedFS 파일 관리 Web UI & CLI 도구"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]

[project.scripts]
seaweed-server = "backend.main:run"

[tool.uv]
dev-dependencies = []
